v0.10
	* ADD : per-layer transparency
	* ADD : background color chooser
	* FIX : redraw view when joining roads
	* ADD : generalization of Tile servers (OSM is now part of that group)
	* ADD : shift-click also prevents roads from selected (previously only alt-click)
	* ADD : configurable projection type (allow custom zoom in "Merkaartor" projection, for background also)
	* ADD : configurable zoom factors
	* ADD : Background tiles caching
	* ADD : Initial track to road
	* ADD : Initial osmarender rendering
	* FIX : decrease memory usage when importing OSM
	* FIX : increase snap update speed
	* ADD : ability to load tracks from the command line (by Daniel van Gerpen)
	* ADD : Mapnik-lookalike style (by Colin Marquardt and Andreas Laas)
	* ADD : ability to set default style at startup
	* FIX : Remove compile warnings and c-style casts (by Daniel van Gerpen)
	* ADD : "created_by" to new features
	* ADD : navigation: view -> bookmark + add/remove
	* FIX : warn when OSM userid/password not set
	* ADD : Export viewport to OSM
	* FIX : crash when splitting roads (by Daniel van Gerpen)
	* FIX : various memory leaks and clean ups (by Daniel van Gerpen)
	* ADD : provide navigation for the slippy map with right and left mouse button (by Daniel van Gerpen)
	* FIX : zoom around cursor position
	* ADD : import NMEA logs (crude) (by Chris Browet)
	* FIX : proper handling of dirty documents (by Chris Browet)
	* ADD : search on name/tags (by Chris Browet)
	* FIX : don't crash while createing a roundabout (by Tommi Vainikiainen)
	* ADD : curved road support
	* FIX : enhance somewhat visibility of selected items (by Chris Browet)
	* ADD : export OSM files (by Chris Browet)
	* ADD : support for OSM backgrounds (by Chris Browet)
	* ADD : centralized preferences dialog (by Chris Browet)
	* ADD : support for WMS maps (by Chris Browet)
	* FIX : remove yahoo maps support (not "legal" way to access tiles) (by Chris Browet)